@@ -1,5 +1,5 @@
   
-  Copyright (c) 2004,2005 by Mulle Kybernetik. All rights reserved.
+  Copyright (c) 2004-2007 by Mulle Kybernetik. All rights reserved.
 
   Permission to use, copy, modify and distribute this software and its documentation
   is hereby granted, provided that both the copyright notice and this permission
